Make sure viewport does not jump on touch end
The viewport can jump when releasing the first finger in a pinch zoom,
this resets the starting pan position when a finger is released.

--- a/public/style.css
+++ b/public/style.css
@@ -90,6 +90,7 @@
 .adsbygoogle {
   display: block;
   text-align: center;
+  width: 100%;
 }
 
 @keyframes fade-out {
